# fastapi_blog

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: crud.py  database.py  main.py  models.py  schemas.py
data/db/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
data/db/mysql/: general_log_213.sdi  slow_log_214.sdi
data/db/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_statement_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  events_statement_127.sdi  events_statement_128.sdi  events_statement_129.sdi  events_statement_130.sdi  events_transacti_131.sdi  events_transacti_132.sdi  events_transacti_133.sdi  events_transacti_134.sdi  events_transacti_135.sdi  events_transacti_136.sdi  events_transacti_137.sdi  events_waits_cur_84.sdi  (+71 more)
migrations/: env.py
migrations/versions/: e6dd8c205e53_adding_user_and_article_table.py
(+1 files in other folders)
