[tool.poetry]
name = "fastapi_blog"
version = "0.1.0"
description = ""
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "1.7.7"
fastapi = "0.75.0"
python-dotenv = "0.20.0"
uvicorn = "0.17.0"
email-validator = "1.1.3"
mysqlclient = "2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
